--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -24,7 +24,10 @@ block view
         .col-sm-12
           p
            b
-           | Somos una empresa peruana fundada en el año 2009, dedicandose al desarrollo y ejecucion de proyector de Ingenieria Electrica, Instalacion y Puesta en Servicio de Sistemas de Electricidad Industrial en Baja y Media Tension, Automatizacion de Procesos para la Instrumentacion de Control y Sistemas de Telecomunicaciones para la Industria en General.
+           | R&F Comunicaciones es una Empresa Peruana fundada en el año 2010, está conformada por personal altamente especializado en las áreas de telecomunicaciones, redes de distribución eléctrica, cableado eléctrico, telefónico y estructurado, pozos a tierra, sistemas de aire acondicionado y sistemas de video vigilancia.
+           | Nos dedicamos a la asesoría, suministros, servicios y proyectos integrales para la pequeña, mediana y gran empresa.
+           | Su amplia oferta incluye servicios especializados con valor agregado como consultoría, suministro de equipamiento de última generación, integración, desarrollo e implementación de soluciones, servicio técnico y soporte post-venta.
+
   p
     |  
     .container.page-content-wrapper
@@ -49,7 +52,7 @@ block view
         .inner-content.gallery
           h1 MISION
           p
-            | Brindar un servicio de calidad y exelencia, empleando la creatividad e innovacion tecnologica, teniendo como objetivo la mejora continua de nuestros procesos, el crcecimiento empresarial sostenible y el desarrollo profesional de sus colaboradores con la finalidad de lohgrar la completa satisfaccion de nuestros clientes por encima de sus espectativas.
+            | Ofrecer un servicio integral, de calidad, confiable y de constante innovación, desde la asesoría técnica, diseño, instalación y puesta en marcha, orientado a satisfacer las necesidades y aspiraciones de nuestros clientes, y acompañados con equipos de última generación.
 
           
       .col-sm-6
@@ -70,7 +73,7 @@ block view
         .inner-content.gallery
           h1 VISION
           p
-            | Ser una empresa lider en el segmento de negocios el cual desarrollamos y sr reconocidos por nuestra exigencia y compromiso con la calidad, seguridad, salud y medio ambiente.
+            | Posicionarnos como empresa líder a nivel local y nacional, en servicios y soluciones tecnológicas de vanguardia, que conlleven a la mejora de la calidad de vida de las personas y total satisfacción de nuestros Clientes.
 
   p
     |  <br/>
