--- a/views/pages/galeria.pug
+++ b/views/pages/galeria.pug
@@ -34,7 +34,7 @@ block view
                             .title development
                             .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                            a.lightbox(data-lightbox='1', href='assets/images/galeria/1.jpg')
+                            a.lightbox(data-lightbox='1', href='assets/imgaleria/1.jpg')
                               i.fa.fa-plus
               .item.web
                 .portfolio-holder.scale-big.animate-in
