--- a/views/pages/proyecto03.pug
+++ b/views/pages/proyecto03.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 CONCURSO PUBLICO N° 003-2016-GRH/GR-1
+            .h4 REDES DE DISTRIBUCION ELECTRICA
             ul
               li
                 a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
