--- a/views/pages/proyecto04.pug
+++ b/views/pages/proyecto04.pug
@@ -7,11 +7,10 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 ADJUDICACIÓN SIMPLIFICADA N° 135-2016-GRH/GR-1 
-            .h4 derivada del CONCURSO PUBLICO N° 004-2016-GRH/GR-1
+            .h4 TELECOMUNICACIONES 
             ul
               li
-                a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
+                a(href='index.html') .
           
   // PAGE CONTENT START
   section.page-content.detail-page
