--- a/views/pages/proyecto10.pug
+++ b/views/pages/proyecto10.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 REDES DE DATOS - LAN
+            .h4 PUESTA A TIERRA
             ul
               li
                 a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
@@ -36,4 +36,3 @@ block view
               | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
             li 
               | Capacitación del personal de mantenimiento y personal encargado.
-
