--- a/views/pages/solutions-control.pug
+++ b/views/pages/solutions-control.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 CONTROL Y AUTOMATIZACION
+            .h4 EQUIPOS TELEFONICOS DIGITALES Y EQUIPOS TELEFONICOS IP
             ul
               li
                 a(href='index.html') Servicios y
