--- a/views/pages/solutions-electricity.pug
+++ b/views/pages/solutions-electricity.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 ELECTRICIDAD
+            .h4 CENTRALES TELEFONICAS
             ul
               li
                 a(href='index.html') Servicios y
@@ -18,7 +18,7 @@ block view
               li
                 span 
               li
-                span en electricidad 
+                span centrales telefonicas
 
     
   // PAGE CONTENT START
