--- a/views/pages/solutions-sanea.pug
+++ b/views/pages/solutions-sanea.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 SANEAMIENTO
+            .h4 VINCHAS Y HEADSETS
             ul
               li
                 a(href='index.html') Servicios y
@@ -18,7 +18,7 @@ block view
               li
                 span 
               li
-                span en Saneamiento 
+                span vinchas y headsets
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
