--- a/views/pages/solutions-tarificadores.pug
+++ b/views/pages/solutions-tarificadores.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 EQUIPOS DE AUDIOCONFERENCIA
+            .h4 TARIFICADORES DE LLAMADAS
             ul
               li
                 a(href='index.html') Servicios y
@@ -18,7 +18,7 @@ block view
               li
                 span 
               li
-                span equipos de audioconferencia
+                span tarificadores de llamadas 
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
@@ -33,5 +33,3 @@ block view
                     | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
-
-
