--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -14,22 +14,18 @@ footer
           li
             a(href='#')
               i.fa.fa-twitter
-          li
-            a(href='#')
-              i.fa.fa-pinterest
-          li
-            a(href='#')
-              i.fa.fa-instagram
-          li
-            a(href='#')
-              i.fa.fa-dribbble
+          
+       
           li
             a(href='#')
               i.fa.fa-flickr
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
        
         div
-          | Somos una empresa peruana fundada en el año 2009, dedicandose al desarrollo y ejecucion de proyector de Ingenieria Electrica, Instalacion y Puesta en Servicio de Sistemas de Electricidad Industrial en Baja y Media Tension, Automatizacion de Procesos para la Instrumentacion de Control y Sistemas de Telecomunicaciones para la Industria en General.
+          |R&F Comunicaciones es una Empresa Peruana fundada en el año 2010, está conformada por personal altamente especializado en las áreas de telecomunicaciones, redes de distribución eléctrica, cableado eléctrico, telefónico y estructurado, pozos a tierra, sistemas de aire acondicionado y sistemas de video vigilancia.
+          |nos dedicamos a la asesoría, suministros, servicios y proyectos integrales para la pequeña, mediana y gran empresa.
+          |Su amplia oferta incluye servicios especializados con valor agregado como consultoría, suministro de equipamiento de última generación, integración, desarrollo e implementación de soluciones, servicio técnico y soporte post-venta.
+
     
     
       .col-lg-3.col-md-3.col-sm-6.col-footer.footer-nav.first-nav
