--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -20,7 +20,7 @@ section.top-bar
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.left-side
         ul
           li
-            a(href='#') Contacto: (01) 528-4005    |   info@ingenieriamvd.com
+            a(href='#') Contacto: (01) 4852027    |   ventas@ryfcomunicaciones.com
 
       .col-lg-6.col-md-6.col-sm-6.col-xs-12.right-side
         ul
@@ -29,19 +29,8 @@ section.top-bar
               i.fa.fa-facebook
           li
             a(href='#')
-              i.fa.fa-twitter
-          li
-            a(href='#')
-              i.fa.fa-pinterest
-          li
-            a(href='#')
-              i.fa.fa-instagram
-          li
-            a(href='#')
-              i.fa.fa-dribbble
-          li
-            a(href='#')
-              i.fa.fa-flickr
+              i.fa.fa-linkedin
+         
 // TOP BAR END
 // MOBILE MENU START
 .menu-container
@@ -54,43 +43,59 @@ section.top-bar
         li
           a.btn-7(href='about')
             span Nosotros
-        li
-          a.btn-7(href='team')
-            span Clientes
+       
         li.has-sub
           a.btn-7(href='solutions-electricity')
             span
-              | Soluciones 
+              | Productos
               i.fa.fa-caret-down(aria-hidden='true')
           .sub
             ul
               li
-                a(href='solutions-electricity') Electricidad
+                a(href='solutions-electricitycp') CENTRALES TELEFONICAS
               li
-                a(href='solutions-control') Control
+                a(href='solutions-controlcp') EQUIPOS TELEFONICOS DIGITALES/IP
               li
-                a(href='solutions-teleco') Telecomunicaciones
+                a(href='solutions-telecocp')  EQUIPOS DE AUDIOCONFERENCIA
               li
-                a(href='solutions-sanea') Saneamiento
+                a(href='solutions-saneaccp')  VINCHAS Y HEADSETS
+              li
+                a(href='solutions-tarificadoresccp') TARIFICADORES DE LLAMADA
+              li
+                a(href='solutions-pozotierracp') MATERIALES PARA POZO A TIERRA
+              li
+                a(href='solutions-aireacondicionadocp') SISTEMAS DE AIRE ACONDICIONADO
+              li  
+                a(href='solutions-videovigilanciacp') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
+              li  
+                a(href='solutions-accesorioscp') CABLES Y ACCESORIOS       
         li.has-sub
           a.btn-7(href='#')
             span
-              | PORTFOLIO 
+              | Servicios
               i.fa.fa-caret-down(aria-hidden='true')
           .sub
             ul
               li
-                a(href='proyectocp04') CONCURSO PUBLICO N° 004-2016-GRH/GR-1
+                a(href='proyectocp04') TELECOMUNICACIONES
               li
-                a(href='proyectocp08') CONCURSO PUBLICO N° 008-2016-GRH/GR-1
+                a(href='proyectocp08') REDES DE DATOS - LAN
               li
-                a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
+                a(href='proyectocp03') REDES DE DISTRIBUCION ELECTRICA
+              li
+                a(href='proyectocp09') AIRE ACONDICIONADO
+              li
+                a(href='proyectocp10') PUESTA A TIERRA  
+              li
+                a(href='proyectocp11') VIDEO VIGILANCIA  
+              li
+                a(href='proyectocp12') CAPACITACIONES  
         li
           a.btn-7(href='galeria')
-            span GALERIA
+            span Galeria
         li
           a.btn-7(href='contact')
-            span CONTACTO
+            span Contacto
     button#close-button.close-button Close Menu
   .menu-shadow
 // MOBILE MENU END
@@ -114,35 +119,48 @@ header
             li.wrap
               a.btn-7(href='about')
                 span NOSOTROS
-            li.wrap
+            //li.wrap
               a.btn-7(href='team')
                 span NUESTROS CLIENTES
             li.wrap
               a.btn-7(href='solutions-electricity')
                 span
-                  | SOLUCIONES 
+                  | PRODUCTOS
                   i.fa.fa-caret-down(aria-hidden='true')
               .sub
                 ul
                   li
-                    a(href='solutions-electricity') ELECTRICIDAD
-                    a(href='solutions-control') CONTROL Y AUTOMATIZACION
-                    a(href='solutions-teleco') TELECOMUNICACIONES
-                    a(href='solutions-sanea') SANEAMIENTO
+                    a(href='solutions-electricity') CENTRALES TELEFONICAS
+                    a(href='solutions-control') EQUIPOS TELEFONICOS DIGITALES/IP
+                    a(href='solutions-teleco') EQUIPOS DE AUDIOCONFERENCIA
+                    a(href='solutions-sanea') VINCHAS Y HEADSETS
+                    a(href='solutions-tarificadores') TARIFICADORES DE LLAMADA
+                    a(href='solutions-pozotierra') MATERIALES PARA POZO A TIERRA
+                    a(href='solutions-aireacondicionado') SISTEMAS DE AIRE ACONDICIONADO
+                    a(href='solutions-videovigilancia') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
+                    a(href='solutions-accesorios') CABLES Y ACCESORIOS
             li.wrap
               a.btn-7(href='#')
                 span
-                  | PORTAFOLIO 
+                  | SERVICIOS
                   i.fa.fa-caret-down(aria-hidden='true')
               .sub
                 ul
                   li
-                    a(href='proyectocp04') CONCURSO PUBLICO N° 004-2016-GRH/GR-1
+                    a(href='proyectocp04') TELECOMUNICACIONES
                   li
-                    a(href='proyectocp08') CONCURSO PUBLICO N° 008-2016-GRH/GR-1
+                    a(href='proyectocp08') REDES DE DATOS - LAN
                   li
-                    a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
-              
+                    a(href='proyectocp03') REDES DE DISTRIBUCION ELECTRICA
+                  li
+                    a(href='proyectocp09') AIRE ACONDICIONADO
+                  li
+                    a(href='proyectocp10') PUESTA A TIERRA  
+                  li
+                    a(href='proyectocp11') VIDEO VIGILANCIA  
+                  li
+                    a(href='proyectocp12') CAPACITACIONES    
+
             li.wrap
               a.btn-7(href='galeria')
                 span GALERIA
