--- a/views/partials/scripts.pug
+++ b/views/partials/scripts.pug
@@ -25,12 +25,12 @@ script.
   insertBefore.call(head, newElement, referenceElement);
   };
   var map = new google.maps.Map( document.getElementById( 'map-canvas' ), {
-  center: { lat: -12.055586, lng: -77.065641 }, 
+  center: { lat: -11.992566, lng: -77.085284 }, 
   scrollwheel: false,
   zoom: 15
   } );
   var locations = [
-  [ 'INGENIERIA mvd S.A.C.', -12.055586, -77.065641, 4 ],
+  [ 'RyF COMUNICACIONES.', -11.992566, -77.085284, 4 ],
   
   ];
   var marker, i, infowindow = new google.maps.InfoWindow( );
