--- a/public/assets/css/colors/blue.css
+++ b/public/assets/css/colors/blue.css
@@ -26,7 +26,7 @@ footer .footer-left ul li a:hover,
 .cd-primary-nav-trigger .cd-menu-icon.is-clicked:after,
 .careers-wrapper .col-careers ul li:before,
 .careers-wrapper .owl-dots > div.active {
-	background-color: #00a4e4;
+	background-color: #333399;
 }
 .btn.transparent:hover,
 .small-services:hover i,
