--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -374,6 +374,18 @@ block view
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
                     a.btn.transparent.mt20(href='solutions-sanea') Ves Mas
         
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/servicios/14.jpg', alt='service4')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title TARIFICADORES
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='solutions-tarificadores') Ves Mas
+ 
   // SERVICES SECTION END
   // SPECILIZE SECTION START
   //section.section-wrapper
@@ -862,7 +874,7 @@ block view
     .container
       .row
         .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
-          span Marcas
+          span Galeria
           h2 SOLUCIONES EN MARCAS
           span.spliter
     .portfolio-wrapper
@@ -940,7 +952,7 @@ block view
                     .clearfix
                     span.small-spliter.animate-in.spliter
                   .right-detail.table-cell.align-middle
-                    span  Cal.Coronel Miguel Rios N°1794 - Urb:Cata
+                    span  Calle 9 Mz.Q.Lt.66 - Urb:Señor de los Milagros, San Martin de Porres, Lima.
               .detail-holder.table
                 .table-row
                   .left-detail.table-cell.align-middle
@@ -950,7 +962,7 @@ block view
                     span.small-spliter.animate-in.spliter
                   .right-detail.table-cell.align-middle
                     span
-                      a(href='mailto:info@ingenieriamvd.com') info@ingenieriamvd.com
+                      a(href='mailto:ventas@ryfcomunicaciones.com') ventas@ryfcomunicaciones.com
               .detail-holder.table
                 .table-row
                   .left-detail.table-cell.align-middle
@@ -968,6 +980,12 @@ block view
               div.form-group
                 label(style="color:white") Nombres y Apellidos *
                 input.form-control(type='text', name='name', required='')
+              div.form-group
+                label(style="color:white") Empresa *
+                input.form-control(type='empresa', name='empresa', required='') 
+              div.form-group
+                label(style="color:white") Telefono *
+                input.form-control(type='telefono', name='telefono', required='') 
               div.form-group
                 label(style="color:white") Email *
                 input.form-control(type='email', name='email', required='')
