--- a/views/pages/proyecto09.pug
+++ b/views/pages/proyecto09.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 REDES DE DATOS - LAN
+            .h4 AIRE ACONDICIONADO
             ul
               li
                 a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
