--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -337,7 +337,7 @@ block view
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle
-                    .title ELECTRICIDAD
+                    .title REDES DE DISTRIBUCION ELECTRICA
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
                     a.btn.transparent.mt20(href='solutions-electricity') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
@@ -348,7 +348,7 @@ block view
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle
-                    .title AUTOMATIZACION
+                    .title INSTALACION Y VENTA DE PRODUCTOS DE SISTEMA PUESTA A TIERRA.
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
                     a.btn.transparent.mt20(href='solutions-control') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
